# dialog

./: .gitignore  Cargo.toml  README.md
crates/json/: Cargo.toml  lib.rs
crates/stream/: Cargo.toml  lib.rs
examples/: simple.rs
src/: lib.rs
src/test/: mod.rs
